{{$NEXT}}
    [Improvements]
    - [BREAKING] Moved import_file to from_file as class constructor on Keyfile
    - [BREAKING] Keyfile constructor now requires private_key and password parameters
    - write_to_file now accepts optional password parameter for password changes
    - Fixed MAC verification and key derivation vulnerabilities
0.020     2025-10-30 23:35:49-03:00 America/Sao_Paulo
    [Improvements]
    - Added EIP-2930 transaction support
    - Added Unit conversion functions parse_units and format_units
    - Transaction parameters can now also be integers or numeric strings
    - Remove Test::Fatal from test dependencies
    [BugFixes]
    - Fix access list encoding
0.019     2025-06-28 23:31:03-03:00 America/Sao_Paulo
- Initial release of Blockchain-Ethereum toolkit as a unified distribution
- Includes functionality from the following previously separate modules:
    * Blockchain::Ethereum::ABI
    * Blockchain::Ethereum::RLP
    * Blockchain::Ethereum::Transaction
    * Blockchain::Ethereum::Keystore
- Modules are now maintained together under one repo:
    https://github.com/refeco/perl-Ethereum-Toolkit