@@ -1,7 +1,9 @@
 {{$NEXT}}
     [Improvements]
-    - [BREAKING] Moved import_file to from_file as class constructor on Keyfile
-    - [BREAKING] Keyfile constructor now requires private_key and password parameters
+    - [BREAKING] Restructured crypto and account files (Key, Address, Seed) are now under Blockchain::Ethereum and not Blockchain::Ethereum::Keystore
+    - [BREAKING] Blockchain::Ethereum::Keystore::Keyfile is now Blockchain::Ethereum::Keystore::File
+    - [BREAKING] Moved import_file to from_file as class constructor on File module
+    - [BREAKING] File constructor now requires private_key and password parameters
     - write_to_file now accepts optional password parameter for password changes
     - Fixed MAC verification and key derivation vulnerabilities
 0.020     2025-10-30 23:35:49-03:00 America/Sao_Paulo
